# aws-batch-jobs

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  image_build_and_push.yaml
batch_jobs/: run_batch_replicate_job.py
batch_jobs/aws_batch_replication/: aws_batch_replication_job.py
batch_jobs/bucket_manifest/: __init__.py  bucket_manifest.Dockerfile  bucket_manifest_job.py  object_metadata.Dockerfile  object_metadata_job.py
batch_jobs/bucket_replicate/: __init__.py  bucket_replicate.Dockerfile  bucket_replicate_job.py  dcf_replication.py  object_copy.Dockerfile  object_copy_job.sh
batch_jobs/copy_to_cleversafe/: __init__.py  copy_bucket.Dockerfile  copy_bucket.py  object_copy.Dockerfile  object_copy.sh
batch_jobs/dcf_bucket_replicate/: __init__.py  dcf_bucket_replicate.Dockerfile  dcf_bucket_replicate_job.py  object_copy_job.sh
batch_jobs/dcf_replicate/: __init__.py  gdc_copy.Dockerfile  gdc_copy_job.sh
batch_jobs/dcf_replication/: __init__.py  dcf_replication.Dockerfile  dcf_replication_job.py  file_get_upload.py  gdc_copy.Dockerfile  gdc_copy_job.sh
batch_jobs/utils/: utils.py
bucket-manifest/: bucket_manifest.Dockerfile  main.py
bucket_manifest/: __init__.py  bucket_manifest_job.py  object_metadata_job.py  utils.py
tests/: __init__.py  conftest.py  context.py  test_bucket_manifest.py
tests/batch_replication/: test_dcf_replication.py  test_settings.py
tests/batch_replication/data/: GDC_test_manifet.tsv
tests/dcf_replication/: test_dcf_replication.py
(+1 files in other folders)
